--- a/index.html
+++ b/index.html
@@ -1,133 +1,162 @@
-<script>
-/* --- Variables DOM --- */
-const fileInput = document.getElementById('fileInput');
-const preview = document.getElementById('preview');
-const logBox = document.getElementById('log');
-const navChooser = document.getElementById('nav-chooser');
-const btnSygic = document.getElementById('btn-sygic');
-const btnGoogle = document.getElementById('btn-google');
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <title>Uber Pro GPS</title>
 
+  <!-- Tesseract OCR -->
+  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
+
+  <style>
+    body{
+      font-family:-apple-system, BlinkMacSystemFont, Helvetica, Arial;
+      background:#0f172a;
+      color:#fff;
+      margin:0;
+      padding:20px;
+    }
+    .card{
+      max-width:420px;
+      margin:auto;
+      background:#020617;
+      border-radius:20px;
+      padding:20px;
+      box-shadow:0 25px 50px rgba(0,0,0,.45);
+    }
+    h2{margin:0 0 10px 0}
+    input{width:100%;margin-bottom:10px}
+    button{
+      width:100%;
+      padding:16px;
+      border-radius:14px;
+      border:none;
+      font-size:16px;
+      font-weight:700;
+      margin-top:12px;
+      cursor:pointer;
+    }
+    .primary{background:#22c55e;color:#000}
+    .secondary{background:#38bdf8;color:#000}
+    img{
+      width:100%;
+      border-radius:14px;
+      margin-top:12px;
+      display:none;
+    }
+    #log{
+      margin-top:14px;
+      font-size:14px;
+      color:#94a3b8;
+      white-space:pre-line;
+    }
+  </style>
+</head>
+<body>
+
+<div class="card">
+  <h2>Uber Pro GPS</h2>
+
+  <input type="file" id="fileInput" accept="image/*" />
+  <img id="preview"/>
+
+  <button class="primary" onclick="analyzeImage()">Analizar trayecto</button>
+  <button class="secondary" onclick="navigatePro()">Navegar PRO</button>
+
+  <div id="log"></div>
+</div>
+
+<script>
 let currentCoords = null;
 
-function log(msg){
-  console.log('[UberPro]', msg);
-  if(logBox) logBox.innerText = msg;
-}
+const fileInput = document.getElementById('fileInput');
+const preview   = document.getElementById('preview');
+const logBox    = document.getElementById('log');
 
-/* --- File input / preview --- */
 fileInput.addEventListener('change', e => {
-  const f = e.target.files[0];
-  if(!f) { log('No hay archivo seleccionado'); return; }
-  preview.src = URL.createObjectURL(f);
-  log('Imagen cargada. Listo para analizar.');
+  const file = e.target.files[0];
+  if(!file) return;
+  preview.src = URL.createObjectURL(file);
+  preview.style.display = 'block';
+  log('Imagen cargada. Lista para analizar.');
 });
 
-/* --- OCR y detección simple de coords --- */
 async function analyzeImage(){
-  if(!fileInput.files[0]) { log('Selecciona una imagen antes de analizar'); return; }
-  log('Iniciando OCR...');
+  if(!fileInput.files[0]){
+    log('Selecciona una imagen primero.');
+    return;
+  }
+
+  log('Analizando imagen (OCR)…');
+
   try{
-    // Tesseract.recognize acepta File directamente
-    const res = await Tesseract.recognize(fileInput.files[0], 'eng');
-    const text = (res && res.data && res.data.text) ? res.data.text : (res && res.text) ? res.text : '';
-    console.log('[OCR TEXT]', text);
-    // búsqueda robusta de lat,lon
+    const result = await Tesseract.recognize(
+      fileInput.files[0],
+      'eng',
+      { logger: () => {} }
+    );
+
+    const text = result.data.text;
+
+    // Busca coordenadas en formato decimal
     const match = text.match(/(-?\d{1,2}\.\d+)\s*,\s*(-?\d{1,3}\.\d+)/);
+
     if(!match){
-      log('OCR terminó: no se encontraron coordenadas en el texto.');
+      log('No se detectaron coordenadas en la imagen.');
       return;
     }
+
     currentCoords = `${match[1]},${match[2]}`;
-    try { await navigator.clipboard.writeText(currentCoords); log('Coordenadas detectadas y copiadas: ' + currentCoords); }
-    catch(e){ log('Coordenas detectadas: ' + currentCoords + ' (pero no se pudo copiar al portapapeles)'); }
-    console.log('[coords]', currentCoords);
+
+    await navigator.clipboard.writeText(currentCoords);
+
+    log(
+      'Coordenadas detectadas:\n' +
+      currentCoords +
+      '\n\n✔ Copiadas al portapapeles'
+    );
+
   }catch(err){
-    console.error('[OCR error]', err);
-    log('Error al procesar imagen (OCR). Revisa consola.');
+    console.error(err);
+    log('Error al procesar la imagen.');
   }
 }
 
-/* --- Mostrar / ocultar chooser --- */
-function showNavChooser(){
-  if(!currentCoords){ log('Primero analiza la imagen para obtener coordenadas'); return; }
-  if(navChooser) navChooser.style.display = 'flex';
-}
-function hideNavChooser(){ if(navChooser) navChooser.style.display = 'none'; }
+function navigatePro(){
+  if(!currentCoords){
+    log('Primero analiza una imagen.');
+    return;
+  }
 
-/* --- Abrir Sygic con varios intentos --- */
-function openSygicWithFallback(sygicUrl, googleUrl){
-  log('Intentando abrir Sygic...');
-  console.log('[try] sygicUrl=', sygicUrl);
+  const sygicUrl  = `com.sygic.aura://coordinate|${currentCoords}`;
+  const googleUrl = `https://www.google.com/maps?q=${currentCoords}`;
 
-  // 1) Capacitor App plugin (recomendado en app nativa)
-  try{
-    if(window.Capacitor && Capacitor.Plugins && Capacitor.Plugins.App && typeof Capacitor.Plugins.App.openUrl === 'function'){
-      console.log('[Capacitor] usando App.openUrl');
-      Capacitor.Plugins.App.openUrl({ url: sygicUrl }).catch((err)=>{
-        console.warn('[Capacitor] openUrl falló, fallback a Google', err);
-        window.location.href = googleUrl;
+  log('Intentando abrir navegación…');
+
+  // 🔵 Capacitor iOS REAL
+  if(window.Capacitor && window.Capacitor.Plugins?.App){
+    window.Capacitor.Plugins.App.openUrl({ url: sygicUrl })
+      .catch(() => {
+        window.Capacitor.Plugins.App.openUrl({ url: googleUrl });
       });
-      return;
-    }
-  }catch(e){ console.warn('Capacitor openUrl attempt threw', e); }
-
-  // 2) Intentar crear <a> y click (funciona en muchos navegadores para schemes)
-  try{
-    const a = document.createElement('a');
-    a.href = sygicUrl;
-    a.style.display = 'none';
-    document.body.appendChild(a);
-    a.click();
-    document.body.removeChild(a);
-    // Si la app no abre, redirigimos a Google después de corto timeout
-    setTimeout(()=>{ log('Si Sygic no abrió, redirigiendo a Google Maps'); window.location.href = googleUrl; }, 1200);
     return;
-  }catch(e){
-    console.warn('Anchor method failed', e);
   }
 
-  // 3) iframe fallback (último recurso)
-  try{
-    const iframe = document.createElement('iframe');
-    iframe.style.display = 'none';
-    iframe.src = sygicUrl;
-    document.body.appendChild(iframe);
-    setTimeout(()=>{ try{ document.body.removeChild(iframe); }catch(e){}; window.location.href = googleUrl; }, 1200);
-    return;
-  }catch(e){
-    console.warn('Iframe method failed', e);
-  }
+  // 🌐 WEB / SAFARI (fallback seguro)
+  const iframe = document.createElement('iframe');
+  iframe.style.display = 'none';
+  iframe.src = sygicUrl;
+  document.body.appendChild(iframe);
 
-  // 4) Fallback final: abrir Google
-  log('No fue posible abrir Sygic desde el navegador. Abriendo Google Maps...');
-  window.location.href = googleUrl;
+  setTimeout(() => {
+    window.location.href = googleUrl;
+  }, 1200);
 }
 
-/* --- Abrir Google directamente --- */
-function openGoogle(googleUrl){
-  log('Abriendo Google Maps...');
-  try{ window.open(googleUrl, '_blank'); }
-  catch(e){ window.location.href = googleUrl; }
+function log(msg){
+  logBox.textContent = msg;
 }
-
-/* --- Botones del chooser --- */
-if(btnSygic) btnSygic.addEventListener('click', ()=>{
-  hideNavChooser();
-  if(!currentCoords){ log('No hay coordenadas para navegar'); return; }
-  const sygicUrl = `com.sygic.aura://coordinate|${currentCoords}`;
-  const googleUrl = `https://maps.google.com/?q=${currentCoords}`;
-  openSygicWithFallback(sygicUrl, googleUrl);
-});
-
-if(btnGoogle) btnGoogle.addEventListener('click', ()=>{
-  hideNavChooser();
-  if(!currentCoords){ log('No hay coordenadas para navegar'); return; }
-  const googleUrl = `https://maps.google.com/?q=${currentCoords}`;
-  openGoogle(googleUrl);
-});
-
-/* --- Expose functions to inline handlers (if used in HTML) --- */
-window.analyzeImage = analyzeImage;
-window.showNavChooser = showNavChooser;
-window.hideNavChooser = hideNavChooser;
 </script>
+
+</body>
+</html>
