--- a/index.html
+++ b/index.html
@@ -1,160 +1,191 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>Uber Pro GPS</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Uber Pro GPS - Sygic Ready</title>
 
-  <!-- Tesseract OCR -->
-  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
+<!-- Tesseract OCR -->
+<script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
 
-  <style>
-    body{
-      font-family:-apple-system, BlinkMacSystemFont, Helvetica, Arial;
-      background:#0f172a;
-      color:#fff;
-      margin:0;
-      padding:20px;
-    }
-    .card{
-      max-width:420px;
-      margin:auto;
-      background:#020617;
-      border-radius:20px;
-      padding:20px;
-      box-shadow:0 25px 50px rgba(0,0,0,.45);
-    }
-    h2{margin:0 0 10px 0}
-    input{width:100%;margin-bottom:10px}
-    button{
-      width:100%;
-      padding:16px;
-      border-radius:14px;
-      border:none;
-      font-size:16px;
-      font-weight:700;
-      margin-top:12px;
-      cursor:pointer;
-    }
-    .primary{background:#22c55e;color:#000}
-    .secondary{background:#38bdf8;color:#000}
-    img{
-      width:100%;
-      border-radius:14px;
-      margin-top:12px;
-      display:none;
-    }
-    #log{
-      margin-top:14px;
-      font-size:14px;
-      color:#94a3b8;
-      white-space:pre-line;
-    }
-  </style>
+<style>
+  /* Diseño ligero basado en tu estilo (no cambia visual) */
+  body{font-family:-apple-system, BlinkMacSystemFont, "Inter", Arial; background:#050505; color:#fff; margin:0; padding:18px; display:flex; justify-content:center; align-items:flex-start; min-height:100vh;}
+  .card{width:100%;max-width:420px;background:#0a0a0a;border-radius:20px;padding:20px;box-shadow:0 18px 40px rgba(0,0,0,.6);}
+  h1{font-family:Orbitron, sans-serif; font-size:24px; letter-spacing:3px; color:#00d2ff; margin:0 0 12px 0;}
+  input[type=file]{width:100%;}
+  img{width:100%;border-radius:12px;margin-top:12px;display:none}
+  button{width:100%;padding:14px;border-radius:12px;border:none;font-weight:800;margin-top:12px;cursor:pointer}
+  .btn-primary{background:linear-gradient(135deg,#fff,#e6e6e6);color:#000}
+  .btn-secondary{background:#00a3ff;color:#000}
+  #log{margin-top:12px;color:#bcd;white-space:pre-line;font-size:13px}
+</style>
 </head>
 <body>
 
 <div class="card">
-  <h2>Uber Pro GPS</h2>
+  <h1>UBER PRO</h1>
 
-  <input type="file" id="fileInput" accept="image/*" />
-  <img id="preview"/>
+  <input id="fileInput" type="file" accept="image/*" />
+  <img id="preview" alt="preview"/>
 
-  <button class="primary" onclick="analyzeImage()">Analizar trayecto</button>
-  <button class="secondary" onclick="navigatePro()">Navegar PRO</button>
+  <button class="btn-primary" onclick="onAnalyze()">Analizar trayecto</button>
+  <button class="btn-secondary" onclick="onNavigatePro()">Navegar PRO</button>
 
-  <div id="log"></div>
+  <div id="log">Estado: esperando imagen...</div>
 </div>
 
 <script>
-let currentCoords = null;
-
+/* -------------------------
+  Variables DOM
+------------------------- */
 const fileInput = document.getElementById('fileInput');
 const preview   = document.getElementById('preview');
 const logBox    = document.getElementById('log');
 
-fileInput.addEventListener('change', e => {
-  const file = e.target.files[0];
-  if(!file) return;
+let currentCoords = null;
+
+/* -------------------------
+  Helpers
+------------------------- */
+function log(msg){
+  console.log('[UberPro]', msg);
+  if(logBox) logBox.textContent = 'Estado: ' + msg;
+}
+
+function showPreview(file){
   preview.src = URL.createObjectURL(file);
   preview.style.display = 'block';
-  log('Imagen cargada. Lista para analizar.');
+}
+
+/* simple validator of lat/lon ranges */
+function isValidLatLon(lat, lon){
+  const la = Number(lat), lo = Number(lon);
+  return !Number.isNaN(la) && !Number.isNaN(lo) && la >= -90 && la <= 90 && lo >= -180 && lo <= 180;
+}
+
+/* extract decimal coords from text */
+function extractCoordsFromText(text){
+  const re = /(-?\d{1,2}\.\d+)\s*,\s*(-?\d{1,3}\.\d+)/g;
+  let m;
+  while((m = re.exec(text)) !== null){
+    if(isValidLatLon(m[1], m[2])) return { lat: Number(m[1]).toFixed(6), lon: Number(m[2]).toFixed(6) };
+  }
+  return null;
+}
+
+/* -------------------------
+  File handling
+------------------------- */
+fileInput.addEventListener('change', e => {
+  const f = e.target.files[0];
+  if(!f){ log('No hay archivo'); return; }
+  showPreview(f);
+  log('Imagen cargada, lista para analizar');
 });
 
-async function analyzeImage(){
-  if(!fileInput.files[0]){
-    log('Selecciona una imagen primero.');
-    return;
-  }
+/* -------------------------
+  OCR & Analyze
+------------------------- */
+async function onAnalyze(){
+  const f = fileInput.files[0];
+  if(!f){ log('Selecciona una imagen primero'); return; }
 
-  log('Analizando imagen (OCR)…');
+  log('Iniciando OCR (puede tardar)...');
 
   try{
-    const result = await Tesseract.recognize(
-      fileInput.files[0],
-      'eng',
-      { logger: () => {} }
-    );
+    // Use Tesseract worker in a simple way
+    const worker = await Tesseract.createWorker({ logger: m => { /* opcional: console.log(m) */ } });
+    await worker.load();
+    await worker.loadLanguage('eng'); // o 'spa' si tu imagen contiene español
+    await worker.initialize('eng');
+    await worker.setParameters({ tessedit_char_whitelist: '0123456789.,- ' });
 
-    const text = result.data.text;
+    const { data } = await worker.recognize(f);
+    await worker.terminate();
 
-    // Busca coordenadas en formato decimal
-    const match = text.match(/(-?\d{1,2}\.\d+)\s*,\s*(-?\d{1,3}\.\d+)/);
+    const text = (data && data.text) ? data.text : '';
+    console.log('[OCR TEXT]', text);
 
-    if(!match){
-      log('No se detectaron coordenadas en la imagen.');
+    const coords = extractCoordsFromText(text);
+    if(!coords){
+      log('OCR completado: no se encontraron coordenadas visibles. Intenta otra captura.');
       return;
     }
 
-    currentCoords = `${match[1]},${match[2]}`;
-
-    await navigator.clipboard.writeText(currentCoords);
-
-    log(
-      'Coordenadas detectadas:\n' +
-      currentCoords +
-      '\n\n✔ Copiadas al portapapeles'
-    );
+    currentCoords = `${coords.lat},${coords.lon}`;
+    try{ await navigator.clipboard.writeText(currentCoords); log('Coordenadas detectadas y copiadas: ' + currentCoords); }
+    catch(e){ log('Coordenas detectadas: ' + currentCoords + ' (no se pudo copiar al portapapeles)'); }
 
   }catch(err){
-    console.error(err);
-    log('Error al procesar la imagen.');
+    console.error('OCR error', err);
+    log('Error al procesar imagen (OCR). Revisa consola.');
   }
 }
 
-function navigatePro(){
+/* -------------------------
+  Navegar PRO (iOS native + fallback)
+------------------------- */
+async function onNavigatePro(){
   if(!currentCoords){
-    log('Primero analiza una imagen.');
+    log('Primero analiza la imagen para obtener coordenadas');
     return;
   }
 
-  const sygicUrl  = `com.sygic.aura://coordinate|${currentCoords}`;
-  const googleUrl = `https://www.google.com/maps?q=${currentCoords}`;
+  const sygicSchemes = [
+    `sygic://coordinate|${currentCoords}`,
+    `com.sygic.aura://coordinate|${currentCoords}`
+  ];
+  const googleUrl = `https://www.google.com/maps/search/?api=1&query=${currentCoords}`;
 
-  log('Intentando abrir navegación…');
+  log('Intentando abrir Sygic en la app nativa...');
 
-  // 🔵 Capacitor iOS REAL
-  if(window.Capacitor && window.Capacitor.Plugins?.App){
-    window.Capacitor.Plugins.App.openUrl({ url: sygicUrl })
-      .catch(() => {
-        window.Capacitor.Plugins.App.openUrl({ url: googleUrl });
-      });
-    return;
+  // Si estamos en Capacitor nativo con @capacitor/app disponible
+  if(window.Capacitor && window.Capacitor.Plugins && window.Capacitor.Plugins.App && typeof window.Capacitor.Plugins.App.openUrl === 'function'){
+    // probamos ambas variantes de scheme
+    try{
+      await window.Capacitor.Plugins.App.openUrl({ url: sygicSchemes[0] });
+      log('Sygic abierto (scheme 1)');
+      return;
+    }catch(e1){
+      console.warn('scheme1 falló', e1);
+      try{
+        await window.Capacitor.Plugins.App.openUrl({ url: sygicSchemes[1] });
+        log('Sygic abierto (scheme 2)');
+        return;
+      }catch(e2){
+        console.warn('scheme2 falló', e2);
+        log('Sygic no se abrió. Abriendo Google Maps como fallback.');
+        await window.Capacitor.Plugins.App.openUrl({ url: googleUrl });
+        return;
+      }
+    }
   }
 
-  // 🌐 WEB / SAFARI (fallback seguro)
-  const iframe = document.createElement('iframe');
-  iframe.style.display = 'none';
-  iframe.src = sygicUrl;
-  document.body.appendChild(iframe);
+  // En web (GitHub Pages / Safari) hacemos el intento por scheme y luego fallback a Google
+  // Intentamos por <a> click (más seguro que location.href en algunos navegadores)
+  for(const s of sygicSchemes){
+    try{
+      const a = document.createElement('a');
+      a.href = s;
+      a.style.display = 'none';
+      document.body.appendChild(a);
+      a.click();
+      document.body.removeChild(a);
+      // le damos un tiempo para que la app abra; si no, abrimos Google
+      setTimeout(()=>{
+        log('Si Sygic no respondió, abriendo Google Maps...');
+        window.location.href = googleUrl;
+      }, 1200);
+      return;
+    }catch(e){
+      console.warn('Intento scheme en web falló para', s, e);
+    }
+  }
 
-  setTimeout(() => {
-    window.location.href = googleUrl;
-  }, 1200);
-}
-
-function log(msg){
-  logBox.textContent = msg;
+  // Último recurso: abrir Google Maps
+  log('Abriendo Google Maps (fallback final)');
+  window.location.href = googleUrl;
 }
 </script>
 
